style.css
/* ------------------- */
/* CUSTOM PROPERTIES   */
/* ------------------- */

:root {
	/* COLORS */
	--clr-dark: 0, 0%, 50%;
	--clr-light: 203, 99%, 48%;
	--clr-accent: 43 100% 69%;
	--clr-black: 0 0% 0%;
	--clr-white: 0 0% 100%;

	/* FLUID TYPOGRAPHY */
	--fs-x-small: clamp(0.69rem, 0.59rem + 0.52vw, 0.96rem);
	--fs-small: clamp(0.83rem, 0.69rem + 0.72vw, 1.2rem);
	--fs-norm: clamp(1rem, 0.8rem + 0.98vw, 1.5rem);
	--fs-big: clamp(1.2rem, 0.94rem + 1.32vw, 1.88rem);
	--fs-x-big: clamp(1.44rem, 1.09rem + 1.76vw, 2.34rem);
	--fs-xl-big: clamp(1.73rem, 1.26rem + 2.35vw, 2.93rem);
	--fs-xxl-big: clamp(2.07rem, 1.45rem + 3.1vw, 3.66rem);
	--fs-xxxl-big: clamp(2.49rem, 1.67rem + 4.08vw, 4.58rem);
	--fs-uber-big: clamp(3rem, 2rem + 5vw, 7rem);

	/* FONT FAMILIES */
	--ff-sans-normal: 'Roboto', sans-serif;
}
/* ------------------- */
/* RESET              */
/* ------------------- */

/* BOX SIZING */
*,
*::before,
*::after {
	box-sizing: border-box;
}

/* RESET MARGINS */
body,
h1,
h2,
h3,
h4,
h5,
p,
figure,
picture {
	margin: 0;
}

/* /////////////////////////////////////////////////////////// */

/* SET UP THE BODY */
body {
	background-color: hsl(var(--clr-white));
	color: hsl(var(--clr-white));
	font-family: var(--ff-sans-normal);
	font-size: var(--fs-norm);
	line-height: 1.5;

	overflow-x: hidden;
}

/* MAKE IMAGES EASIER TO WORK WITH */
img,
picture {
	display: block;
	max-width: 100%;
}

/* MAKE FORM ELEMENTS EASIER TO WORK WITH */
input,
button,
textarea,
select {
	font: inherit;
}

/* REMOVE ANIMATIONS FOR PEOPLE WHO HAVE TURNED THEM OFF */

@media (prefers-reduced-motion: reduce) {
	*,
	*::before,
	*::after {
		animation-duration: 0.01ms !important;
		animation-iteration-count: 1 !important;
		transition-duration: 0.01ms !important;
		scroll-behavior: auto !important;
	}
}
/* ------------------- */
/* UTILITY CLASSES     */
/* ------------------- */

.flex {
	display: flex;
}

/* ASSIGN FLUID TYPOGRAPHY STEPS*/
.fs-8 {
	font-size: var(--fs-uber-big);
}
h1,
.fs-7 {
	font-size: var(--fs-xxxl-big);
}
h2,
.fs-6 {
	font-size: var(--fs-xxl-big);
}
h3,
.fs-5 {
	font-size: var(--fs-xl-big);
}
h4,
.fs-4 {
	font-size: var(--fs-x-big);
}
h5,
.fs-3 {
	font-size: var(--fs-big);
}
p,
.fs-2 {
	font-size: var(--fs-norm);
}
.fs-1 {
	font-size: var(--fs-small);
}
.nav-item {
	font-size: var(--fs-small);
}

@media (max-width: 35em), (max-height: 35em) {
	h1,
	.fs-7 {
		font-size: var(--fs-xxl-big);
	}
	h2,
	.fs-6 {
		font-size: var(--fs-xl-big);
	}
	h3,
	.fs-5 {
		font-size: var(--fs-x-big);
	}
	h4,
	.fs-4 {
		font-size: var(--fs-big);
	}
}

@media (max-width: 25em), (max-height: 25em) {
	h1,
	.fs-7 {
		font-size: var(--fs-x-big);
	}
	h2,
	.fs-6 {
		font-size: var(--fs-big);
	}
	h3,
	.fs-5 {
		font-size: var(--fs-norm);
	}
	h4,
	.fs-4 {
		font-size: var(--fs-small);
	}
	h5,
	.fs-3 {
		font-size: var(--fs-small);
	}
	p,
	.fs-2 {
		font-size: var(--fs-x-small);
	}
}
.fs-7,
.fs-6,
.fs-5,
.fs-4 {
	line-height: 1.3;
}

/* /////////////////////////////////////////////////////////// */

/*  COLORS */

.bg-dark {
	background-color: hsl(var(--clr-dark));
}
.bg-light {
	background-color: hsl(var(--clr-light));
}
.bg-accent {
	background-color: hsl(var(--clr-accent));
}
.bg-white {
	background-color: hsl(var(--clr-white));
}
.bg-black {
	background-color: hsl(var(--clr-black));
}

.text-dark {
	color: hsl(var(--clr-dark));
}
.text-light {
	color: hsl(var(--clr-light));
}
.text-white {
	color: hsl(var(--clr-white));
}
.text-black {
	color: hsl(var(--clr-black));
}
/* /////////////////////////////////////////////////////////// */

/* TYPOGRAPHY */

.ff-sans-normal {
	font-family: var(--ff-sans-normal);
}

.letter-space-1 {
	letter-spacing: 5px;
}
.letter-space-2 {
	letter-spacing: 3px;
}
.letter-space-3 {
	letter-spacing: 2.5px;
}

.uppercase {
	text-transform: uppercase;
}

/* /////////////////////////////////////////////////////////// */

/* SPACING - MARGIN-TOP */

.flow > *:not(:first-child) {
	margin-top: 3vh;
}

.top-1 {
	margin-top: 1vh;
}
.top-2 {
	margin-top: 2vh;
}
.top-3 {
	margin-top: 3vh;
}
.top-6 {
	margin-top: 6vh;
}
.top-9 {
	margin-top: 9vh;
}

.bot-1 {
	margin-bottom: 1vh;
}
.bot-2 {
	margin-bottom: 2vh;
}
.bot-3 {
	margin-bottom: 3vh;
}
.bot-6 {
	margin-bottom: 6vh;
}
.bot-9 {
	margin-bottom: 9vh;
}

/* /////////////////////////////////////////////////////////// */

/* ACCESSIBILITY */

.sr-only {
	border: 0;
	clip: rect(0, 0, 0, 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	white-space: nowrap; /* added line */
	width: 1px;
}

.skip-to-content {
	background-color: hsl(var(--clr-black));
	color: hsl(var(--clr-white));
	left: 1vw;
	padding: 0.2em 0.5em;
	position: absolute;
	transform: translateY(-100%);
	transition: transform 250ms ease-in;
	z-index: 9999;
}

.skip-to-content:focus {
	transform: translateY(16vh);
}

/* /////////////////////////////////////////////////////////// */

/* ------------------- */
/* PRIMARY HEADER      */
/* LAYOUT + SPACING    */
/* ------------------- */

.primary-header-layout {
	display: grid;
	grid-template-columns: 20vw 100px 1fr;
	grid-template-rows: 15vh;
}

@media (min-width: 45em) {
	.primary-header-layout {
		grid-template-columns: auto 1fr;
	}

	.primary-navigation {
		display: grid;
		grid-template-columns: 1fr repeat(3, auto) 1fr;
	}

	.nav-item1 {
		grid-column: 2;
	}
}
/* ////////////////////// */

@media (max-width: 44.999em) {
	.primary-navigation {
		display: grid;
		grid-template-columns: 1fr;
		grid-template-rows: repeat(5, 5vh);
	}
}
/* ////////////////////// */

/* ------------------- */
/* PRIMARY-HEADER      */
/* ------------------- */

.primary-header-layout {
	align-items: center;
}
.logo {
	max-height: 12vh;
	width: auto;
}

.primary-navigation {
	justify-content: center;
	list-style: none;
	margin: 0;
	padding: 0;
	align-items: center;
}

.primary-navigation a {
	text-decoration: none;
}

.nav-item {
	border-bottom: 0.4vh solid hsl(var(--clr-white) / 0);
	cursor: pointer;
	padding: 1.4vh clamp(0.5rem, 2vw, 4.5rem) 1vh;
}

.nav-item:hover,
.nav-item:focus {
	border-color: hsl(var(--clr-white) / 0.5);
}

.contact-btn {
	background-color: hsl(var(--clr-accent));
	border: 0.3vw solid hsl(var(--clr-light));
	border-radius: 2rem;
	cursor: pointer;
	font-size: var(--fs-small);
	padding: 0.5rem 0.7rem;
	text-decoration: none;
	white-space: nowrap;
}

.contact-btn:hover,
.contact-btn:focus {
	background-color: hsl(var(--clr-light));
	border: 0.3vw solid hsl(var(--clr-white));
	color: hsl(var(--clr-white));
}

@media (min-width: 45em) {
	.nav-item5 {
		justify-self: end;
	}
}

/* MOBILE/SMALL TABLET NAVIGATION //////////////////////////////////////////// */

.mobile-nav-toggle {
	display: none;
}

@media (max-width: 44.999em) {
	.primary-navigation {
		background-color: hsl(var(--clr-black) / 0.85);
		gap: 6vh;
		inset: 0 0 0 30%;
		justify-content: start;
		padding: 15vh 3rem;
		position: fixed;
		transform: translateX(100%);
		transition: transform 500ms ease-in-out;
		z-index: 1000;
	}

	.primary-navigation[data-visible='true'] {
		transform: translateX(0);
	}

	/* MOBILE NAV TOGGLE ////////// */

	.mobile-nav-toggle {
		background: transparent;
		background-image: url(./images/icon-hamburger.svg);
		background-position: center;
		background-repeat: no-repeat;
		border: 0;
		display: block;
		height: 1.5rem;
		position: absolute;
		right: 9vw;
		top: 6vh;
		width: 1.5rem;
		z-index: 2000;
	}
	.mobile-nav-toggle[aria-expanded='true'] {
		background-image: url(./images/icon-close.svg);
		position: fixed;
	}

	.mobile-nav-toggle:focus-visible {
		outline: 5px solid white;
		outline-offset: 5px;
	}
}

/* //////////////////////////////////////////////////////////////////////// */
/* ------------------- */
/* LAYOUT + SPACING    */
/* ------------------- */
/* //////////////////////////////////////////////////////////////////////// */
.section-wrap {
	display: grid;
	grid-template-columns: minmax(2rem, 1fr) minmax(0, 80rem) minmax(2rem, 1fr);
}

.section-wrap > *:first-child {
	grid-column: 2;
}

/* //////////////////////////////////////////////////////////////////////// */

.section1 {
	grid-template-rows: minmax(85vh, auto);
	place-items: center;
	text-align: center;
}

.sect1-sub {
	gap: 3vw;
}

.section1-layout > a {
	text-decoration: none;
}
.membership-btn {
	background-color: hsl(var(--clr-accent));
	border: 0.3vw solid hsl(var(--clr-light));
	border-radius: 2rem;
	cursor: pointer;
	font-size: var(--fs-small);
	padding: 0.5rem 0.7rem;
	text-decoration: none;
	white-space: nowrap;
}

.membership-btn:hover,
.membership-btn:focus {
	background-color: hsl(var(--clr-light));
	border: 0.3vw solid hsl(var(--clr-white));
	color: hsl(var(--clr-white));
}

/* ////////////////////// */

.footer-layout {
	display: grid;
	grid-template-columns: auto 1fr auto;
	align-items: center;
}

.footer-logo {
	width: min(10vw, 100px);
	margin-right: 5vw;
}

.socials {
	align-self: end;
	justify-self: center;
	text-align: center;
}
.link-icons {
	gap: 2vw;
}

.link-icon {
	cursor: pointer;
	width: 30px;
}

/* /////////////////////////////////////////////////////////// */

/* ///////////////////////////////////////////////////////////////////////// */

/* ------------------- */
/* BACKGROUNDS      */
/* ------------------- */

.home {
	background: hsl(var(--black));
	background-image: linear-gradient(
			hsl(var(--clr-black) / 0.5),
			hsl(var(--clr-black) / 0.5)
		),
		url(./images/workout-girl.jpg);
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
}

.primary-header {
	background: hsl(var(--clr-white) / 0.2);
}

.footer {
	background: hsl(var(--black));
	background-image: linear-gradient(
			hsl(var(--clr-black) / 0.6),
			hsl(var(--clr-black) / 0.6)
		),
		url(./images/gym-equipment.jpg);
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
}

/* ///////////////////////////////////////////////////////////////////////// */

